--- a/src/public/assets/css/detail.css
+++ b/src/public/assets/css/detail.css
@@ -102,16 +102,22 @@
     color:#fff;
 }
 
+.date_error_and_input,
+.time_error_and_select,
+.number_error_and_select{
+    margin-bottom:10px;
+}
+
+.error_message{
+    color:#fff;
+    font-weight:bold;
+}
+
 .input_reserve_date,
 .select_reserve_time,
 .select_reserve_number{
     border-radius:5px;
     font-family:sans-serif;
-}
-
-.input_reserve_date,
-.select_reserve_time{
-    margin-bottom:10px;
 }
 
 .input_reserve_date{
