--- a/src/public/assets/css/common.css
+++ b/src/public/assets/css/common.css
@@ -28,6 +28,8 @@
     padding:5px;
     display:grid;
     grid-template-rows:1fr 1fr 1fr 1fr 1fr;
+    z-index: 100;
+    cursor:default;
 }
 
 .hamburger_line{
@@ -55,4 +57,43 @@
     color:#0000ff;
     display:block;
     margin:0 0 0 30px;
+}
+
+.modal{
+    position:absolute;
+    top:-100%;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#dcdcdc;
+}
+
+.modal_links{
+    width:20%;
+    margin:0 auto;
+    margin-top:250px;
+    text-align:center;
+    display:flex;
+    flex-direction:column;
+}
+
+.modal_change_close{
+    color:#fff;
+    text-align: center;
+    font-size:30px;
+    align-items:center;
+    display:unset;
+}
+
+.close_button{
+    margin:0;
+    cursor:default;
+}
+
+.modal_hyperlink{
+    text-decoration:none;
+    color:#0000ff;
+    font-size:25px;
+    margin-bottom:20px;
 }
