お気に入り店舗仕様修正

--- a/src/public/assets/css/gourmets.css
+++ b/src/public/assets/css/gourmets.css
@@ -122,3 +122,9 @@
 	transform: rotate(45deg);
 	transform-origin: 100% 100%;
 }
+
+.heart_favorite_state::before,
+.heart_favorite_state::after
+{
+    background:#ff0000;
+}
