--- a/src/public/assets/css/gourmets.css
+++ b/src/public/assets/css/gourmets.css
@@ -12,7 +12,7 @@
 
 .area_select,
 .genre_select,
-.gourmet_name_search{
+.gourmet_name_input{
     outline:none;
     border:none;
     background:transparent;
@@ -25,10 +25,29 @@
     border-right:solid 1px #7d7d7d;
 }
 
-.gourmet_name_search{
+.gourmet_name_input{
     color:#333;
     padding-left:20px;
     font-family:sans-serif;
+}
+
+.scope_search_button,
+.reset_link{
+    font-size:10px;
+    padding:5px 10px;
+    background:#0000ff;
+    color:#fff;
+    font-weight:bold;
+}
+
+.scope_search_button{
+    border:none;
+    outline:none;
+}
+
+.reset_link{
+    text-decoration:none;
+    display:inline-block;
 }
 
 .container{
