--- a/src/public/assets/css/gourmets.css
+++ b/src/public/assets/css/gourmets.css
@@ -55,10 +55,11 @@
     margin:0 auto;
     display:flex;
     flex-wrap:wrap;
-    justify-content:space-evenly;
+    justify-content:flex-start;
 }
 
 .gourmet_card{
+    margin:1%;
     width:23%;
     margin-bottom:20px;
     display:flex;
